fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ button,span{
     width:100vw;
     height:100vh;
     background: white;
-    
+    overflow: auto;
     position:fixed;
     top:0;
     left:0;
